--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -203,6 +203,7 @@ report:
   need_reply: "↩️ Ответь на сообщение, которое хочешь проверить"
   cant_report_bot: "🤖 Ботов не проверяем"
   cant_report_self: "🙃 Себя нельзя"
+  cant_report_admin: "👮 Админов нельзя"
   rate_limited: "⏳ Слишком много репортов. Подожди ${seconds}с"
   spam_check_disabled: "❌ Проверка выключена в этой группе"
   no_content: "📭 Нет текста для анализа"
