--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -209,6 +209,7 @@ report:
   need_reply: "↩️ Відповідай на повідомлення, яке хочеш перевірити"
   cant_report_bot: "🤖 Ботів не перевіряємо"
   cant_report_self: "🙃 Себе не можна"
+  cant_report_admin: "👮 Адмінів не можна"
   rate_limited: "⏳ Забагато репортів. Почекай ${seconds}с"
   spam_check_disabled: "❌ Перевірка вимкнена в цій групі"
   no_content: "📭 Нема тексту для аналізу"
