Enhance report handling by validating target user and adding error message for invalid targets; improve spam check context for channel posts and adjust user info retrieval logic.

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -217,6 +217,7 @@ report:
   cant_report_bot: "🤖 Ботов не проверяем"
   cant_report_self: "🙃 Себя нельзя"
   cant_report_admin: "👮 Админов нельзя"
+  invalid_target: "❌ Не удалось определить отправителя"
   rate_limited: "⏳ Слишком много репортов. Подожди ${seconds}с"
   spam_check_disabled: "❌ Проверка выключена в этой группе"
   no_content: "📭 Нет текста для анализа"
