--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -240,6 +240,7 @@ report:
   cant_report_bot: "🤖 Can't report bots"
   cant_report_self: "🙃 You can't report yourself"
   cant_report_admin: "👮 Can't report admins"
+  invalid_target: "❌ Cannot identify message sender"
   rate_limited: "⏳ Too many reports. Wait ${seconds}s"
   spam_check_disabled: "❌ AI spam check is disabled in this group"
   no_content: "📭 No text content to analyze"
